syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";
import "attribute_expression.proto";

message ProductOrderReleaseRuleInfo {
	//ID 
 	string id=3;
	//优先级 
 	int32 priority=4;
	//发放产线ID 
    string productionLineID=5;
    //发放产线
    ProductionLineInfo productionLine=9;
	//是否启用 
 	bool enable=6;
	//默认发放 
 	bool initialValue=7;
	//备注 
 	string remark=8;
    //特征表达式 
 	repeated AttributeExpressionInfo attributeExpressions=2;
}

message QueryProductOrderReleaseRuleRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
}

message QueryProductOrderReleaseRuleResponse{
    Code code=1;
    string message=2;
    repeated ProductOrderReleaseRuleInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductOrderReleaseRuleResponse{
    Code code=1;
    string message=2;
    repeated ProductOrderReleaseRuleInfo data=3;
}

message GetProductOrderReleaseRuleDetailResponse{
    Code code=1;
    string message=2;
    ProductOrderReleaseRuleInfo data=3;
}